# zipminator

./: .buildinfo  .env.template  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.signaling  FEATURES.md  FUNDING.yml  LICENSE  NOTICE  PROMPT_UX_SPRINT.md  Procfile  QUICK_START.md  README.md  README_RUST_KYBER768.md  README_TOKEN_SECURITY.md  SECURITY.md  Untitled copy.ipynb  Untitled.ipynb  Untitled1.ipynb  __main__.py  conftest.py  docker-compose.integration.yml  docker-compose.signaling.yml  docker-compose.yml  environment.yml  example_usage.ipynb  example_usage_self_destruct.ipynb  example_usage_zipit.py  genindex.html  ibm-qrng.ipynb  index.html  objects.inv  pyproject.toml  requirements.txt  (+3 more)
.claude/: CLAUDE.md  settings.json
.github/: dependabot.yml
.ipynb_checkpoints/: example_usage-checkpoint.ipynb
_notes/: Untitled.ipynb  (+2 more)
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
api/scripts/: setup.sh  test.sh  verify.sh
api/src/: __init__.py  config.py  main.py
api/src/db/: __init__.py  database.py  message_models.py  message_store.py  models.py
api/src/db/migrations/: env.py
api/src/middleware/: __init__.py  auth.py  logging.py
api/src/models/: __init__.py  auth.py  crypto.py  keys.py
api/src/routes/: CLAUDE.md  __init__.py  ai.py  anonymize.py  auth.py  crypto.py  email.py  health.py  keys.py  messages.py  messenger.py  signaling.py  voip.py
api/src/services/: __init__.py  auth.py  llm_service.py  rate_limit.py  rust_cli.py
api/tests/: __init__.py  conftest.py  test_auth.py  test_crypto.py  test_health.py  test_keys.py
browser/app/rust/: Cargo.toml
browser/src-tauri/: ADR-webview.md  Cargo.toml  tauri.conf.json
browser/src-tauri/src/: commands.rs  extensions.rs  lib.rs  main.rs  navigation.rs  pqc.rs  state.rs  tabs.rs
browser/src-tauri/src/ai/: cloud_llm.rs  config.rs  local_llm.rs  mod.rs  ollama.rs  page_context.rs  prompt_guard.rs  sidebar.rs
browser/src-tauri/src/privacy/: audit.rs  cookie_rotation.rs  entropy.rs  fingerprint.rs  mod.rs  password_manager.rs  self_destruct.rs  session.rs  telemetry_blocker.rs
browser/src-tauri/src/proxy/: certificate.rs  config.rs  metrics.rs  mod.rs  pqc_detector.rs  server.rs  tls.rs
browser/src-tauri/src/vpn/: config.rs  kill_switch.rs  metrics.rs  mod.rs  pq_handshake.rs  state.rs  tunnel.rs
browser/src-tauri/tests/: kill_switch_test.rs  pq_handshake_test.rs  vpn_proxy_integration_test.rs  vpn_state_test.rs
compliance/nist-kat/: Cargo.toml  Makefile  README.md  generate_report.sh
compliance/nist-kat/reports/: validation_report_template.md
compliance/nist-kat/src/cpp/: deterministic_rng.cpp  deterministic_rng.h  nist_kat_kyber768.cpp
compliance/nist-kat/src/rust/: main.rs  nist_kat.rs
compliance/nist-kat/test_vectors/: CHECKSUMS.txt  README.md
config/: .dockerignore  .github-workflows-release.yml  Cargo-cli.toml  Dockerfile  INSTALLATION-CHECKLIST.md  MANIFEST.in  PACKAGE-CONFIGS-INDEX.md  README.md  docker-compose.yml  entropy_sources.yaml  ibm_limits.yaml  ibm_qrng_config.yaml  installation-guide.md  multi_provider_config.yaml  npm-install-binary.js  npm-package.json  package-configurations-summary.md  pyproject.toml  qbraid_optimal_settings.yaml  qbraid_providers.yaml  setup-brew-tap.sh  setup.cfg  zipminator.rb
crates/zipminator-app/: Cargo.toml
crates/zipminator-app/src/: crypto.rs  email.rs  lib.rs  pii.rs  ratchet.rs  srtp.rs
crates/zipminator-bench/: Cargo.toml
crates/zipminator-bench/benches/: kyber_bench.rs
crates/zipminator-core/: Cargo.toml  build.rs
crates/zipminator-core/fuzz/: Cargo.toml
crates/zipminator-core/fuzz/fuzz_targets/: fuzz_header_from_bytes.rs  fuzz_legacy_decrypt.rs  fuzz_session_decrypt.rs
crates/zipminator-core/src/: CLAUDE.md  anonymize.rs  constants.rs  email_crypto.rs  email_transport.rs  entropy_source.rs  errors.rs  ffi.rs  kyber768.rs  kyber768_qrng.rs  lib.rs  logging.rs  message_store.rs  ntt.rs  openpgp_keys.rs  pii.rs  poly.rs  python_bindings.rs  quantum_entropy_pool.rs  ratchet.rs  srtp.rs  tests.rs  utils.rs  voip_session.rs
crates/zipminator-core/src/are/: domains.rs  extractor.rs  mod.rs  program.rs
crates/zipminator-core/src/ios_compat/: chkstk_stub.c
crates/zipminator-core/src/qrng/: entropy_pool.rs  ibm_quantum.rs  id_quantique.rs  mock.rs  mod.rs
crates/zipminator-core/src/ratchet/: chains.rs  header.rs  mod.rs  state.rs
crates/zipminator-core/src/tests/: mod.rs  ratchet_tests.rs
crates/zipminator-core/tests/: cross_module_integration.rs
crates/zipminator-fuzz/: Cargo.toml  slow-unit-9230829c03a279ad1653b1dd77e426d8ddede10b
crates/zipminator-fuzz/fuzz_targets/: fuzz_decapsulate.rs  fuzz_encapsulate.rs  fuzz_keygen.rs  fuzz_round_trip.rs
crates/zipminator-mesh/: Cargo.toml
crates/zipminator-mesh/src/: CLAUDE.md  attestation.rs  csi_entropy.rs  em_canary.rs  entropy_bridge.rs  lib.rs  mesh_key.rs  provisioner.rs  puek.rs  siphash_key.rs  spatiotemporal.rs  topology_auth.rs  vital_auth.rs
crates/zipminator-mesh/tests/: integration_test.rs  physical_crypto_integration.rs
crates/zipminator-nist/: Cargo.toml
crates/zipminator-nist/src/cpp/: vector_integration.cpp
crates/zipminator-nist/src/rust/: deterministic_rng.rs  main.rs  nist_kat.rs
mobile/modules/zipminator-crypto/android/: CMakeLists.txt  build.gradle
mobile/modules/zipminator-crypto/android/src/main/cpp/: zipminator_jni.cpp
mobile/modules/zipminator-crypto/android/src/main/java/expo/modules/zipminatorcrypto/: ZipminatorCryptoModule.kt  ZipminatorCryptoView.kt
src/cpp/qrng/: CMakeLists.txt  README.md  entropy_pool.cpp  entropy_pool.h  ibm_quantum.cpp  ibm_quantum.h  id_quantique_usb.cpp  id_quantique_usb.h  mock_qrng.cpp  mock_qrng.h  qrng_interface.h
src/rust/: Cargo-bundle.toml  Cargo.toml
src/rust/benches/: kyber_bench.rs
src/rust/src/: constants.rs  entropy_source.rs  kyber768.rs  lib.rs  ntt.rs  poly.rs  tests.rs
src/rust/src/qrng/: id_quantique.rs  mock.rs  mod.rs
(+1539 files in other folders)
