[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "zipminator"
version = "0.5.0b1"
description = "Post-quantum cryptography with quantum entropy - CRYSTALS-Kyber-768 implementation"
readme = "README.md"
authors = [
    { name = "QDaria AS", email = "mo@qdaria.com" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering",
]
keywords = [
    "post-quantum",
    "cryptography",
    "kyber",
    "quantum-resistant",
    "pqc",
    "ml-kem",
    "fips-203",
]

dependencies = [
    "cryptography>=41.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
data = ["numpy>=1.20.0", "pandas>=1.3.0", "pyzipper>=0.3.6"]
anonymization = ["faker>=20.0", "numpy>=1.20.0", "pandas>=1.3.0"]
cli = ["typer>=0.9.0", "rich>=13.0.0"]
quantum = ["httpx>=0.25.0"]
jupyter = [
    "jupyterlab>=4.0",
    "ipywidgets>=8.0",
    "ipython>=8.0",
    "plotly>=5.0",
]
email = ["aiosmtpd>=1.4.0"]
benchmark = ["matplotlib>=3.10.0", "seaborn>=0.13.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = ["zipminator[data,anonymization,cli,quantum,jupyter,email]"]

[project.urls]
Homepage = "https://github.com/QDaria/zipminator"
Repository = "https://github.com/QDaria/zipminator"
Documentation = "https://zipminator.readthedocs.io"
"Bug Tracker" = "https://github.com/QDaria/zipminator/issues"

[project.scripts]
zipminator = "zipminator.cli:main"

[tool.maturin]
# Path to Cargo.toml for the core crate
manifest-path = "crates/zipminator-core/Cargo.toml"
# Python source directory - Python package is in src/zipminator/
python-source = "src"
# Build module name - the Rust extension
module-name = "zipminator._core"
# Features to enable
features = ["pyo3"]
# Build compatibility
compatibility = "manylinux2014"
# Strip symbols in release builds
strip = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
