[metadata]
name = zipminator-pqc
version = 0.1.0
author = QDaria
author_email = hello@qdaria.com
description = Quantum-safe cryptography with NIST Kyber768 and IBM QRNG
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qdaria/zipminator
project_urls =
    Bug Tracker = https://github.com/qdaria/zipminator/issues
    Documentation = https://docs.zipminator.zip
    Source Code = https://github.com/qdaria/zipminator
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Security
    Topic :: Security :: Cryptography

[options]
packages = find:
python_requires = >=3.8
install_requires =
    cryptography>=41.0.0
    click>=8.0.0

[options.packages.find]
where = src/python

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0
docs =
    sphinx>=5.0.0
    sphinx-rtd-theme>=1.0.0
    myst-parser>=0.18.0

[options.entry_points]
console_scripts =
    zipminator = zipminator.cli:main

[bdist_wheel]
universal = 0

[egg_info]
tag_build =
tag_date = 0
