[package]
name = "zipbrowser"
version = "0.1.0"
edition = "2021"
authors = ["Qdaria Inc. <team@qdaria.com>"]
license = "MIT"
description = "ZipBrowser — Tauri v2 PQC browser with ML-KEM-768 HTTPS proxy, PQ-WireGuard VPN, AI sidebar, and QRNG privacy engine"

[dependencies]
# ── Tauri framework ──────────────────────────────────────────────────
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"

# ── Serialization ────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Async runtime ────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }

# ── HTTP proxy server (Domain 2: pqc-tls) ───────────────────────────
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
http-body-util = "0.1"
bytes = "1"

# ── TLS — rustls with PQC support via aws-lc-rs ─────────────────────
rustls = { version = "0.23", default-features = false, features = ["logging", "tls12"] }
rustls-post-quantum = "0.2"
tokio-rustls = "0.26"
webpki-roots = "0.26"
rustls-pemfile = "2"
rustls-pki-types = "1"

# ── Certificate generation (Domain 2) ───────────────────────────────
rcgen = { version = "0.13", features = ["pem"] }

# ── VPN — PQ-WireGuard (Domain 3: embedded-vpn) ─────────────────────
boringtun = { version = "0.7", optional = true }
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }
hex = "0.4"

# ── AI sidebar (Domain 4) ───────────────────────────────────────────
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"

# ── Privacy engine (Domain 5) ───────────────────────────────────────
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["password-hash"] }
getrandom = "0.2"
subtle = "2"

# ── Browser shell (Domain 1) ────────────────────────────────────────
uuid = { version = "1", features = ["v4"] }
url = { version = "2", features = ["serde"] }
urlencoding = "2"

# ── Logging & diagnostics ───────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.11"

# ── Concurrent data structures ───────────────────────────────────────
dashmap = "6"

# ── Error handling ───────────────────────────────────────────────────
thiserror = "1"
anyhow = "1"

# ── Zipminator PQC core ───────────────────────────────────────────────
zipminator-core = { path = "../../crates/zipminator-core", default-features = false }

# ── Misc utilities ───────────────────────────────────────────────────
base64 = "0.22"
once_cell = "1"
time = "0.3"
chrono = { version = "0.4", features = ["serde"] }
portpicker = "0.1"
tempfile = "3"

# ── Platform-specific ───────────────────────────────────────────────
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls"] }
tempfile = "3"

[features]
default = ["custom-protocol", "tauri-shell"]
custom-protocol = ["tauri/custom-protocol"]
tauri-shell = []
vpn = ["boringtun"]
