[package]
name = "zipminator-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CRYSTALS-Kyber-768 implementation in Rust for Zipminator PQC Platform"

[dependencies]
# PyO3 for Python bindings (optional, enabled by default)
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"], optional = true }

# Cryptographic primitives
sha3 = "0.10"
subtle = "2.5"  # Constant-time operations
rand_core = "0.6"
getrandom = { version = "0.2", features = ["std"] }
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
aes-gcm = "0.10"
libc = "0.2"

# QRNG Integration
libusb = { version = "0.3", optional = true }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
crossbeam = "0.8"

# Optional features
tokio = { version = "1.40", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
proptest = "1.4"

[features]
default = []
pyo3 = ["dep:pyo3"]
async = ["tokio"]
config = ["serde", "serde_json"]
proptest-tests = []
qrng-usb = ["libusb"]

[lib]
name = "zipminator_core"
path = "src/lib.rs"
# Generate rlib for pure rust, cdylib for Android (.so) and Python (.so/.pyd), staticlib for iOS (.a)
crate-type = ["rlib", "cdylib", "staticlib"]

