[package]
name = "zipminator-nist"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "NIST Known Answer Test vectors for Kyber-768 validation"

[dependencies]
# Cryptographic dependencies
aes = "0.8"
ctr = "0.9"
sha3 = "0.10"
subtle = "2.5"

# Kyber implementation
zipminator-core = { path = "../zipminator-core" }

[[bin]]
name = "nist_kat_kyber768"
path = "src/rust/main.rs"

[lib]
name = "nist_kat"
path = "src/rust/nist_kat.rs"
