[package]
name = "kyber768-rust"
version = "0.1.0"
edition = "2021"
authors = ["Zipminator Team"]
description = "CRYSTALS-Kyber-768 implementation in Rust for Zipminator PQC Platform"

[dependencies]
# Cryptographic primitives
sha3 = "0.10"
subtle = "2.5"  # Constant-time operations
rand_core = "0.6"
getrandom = { version = "0.2", features = ["std"] }

# QRNG Integration
libusb = "0.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
crossbeam = "0.8"

# Optional features
tokio = { version = "1.40", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Optional: Use existing Kyber crate as reference
# pqc_kyber = "0.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
proptest = "1.4"

[features]
default = []
async = ["tokio"]
config = ["serde", "serde_json"]
proptest-tests = []

[lib]
name = "kyber768"
path = "src/lib.rs"

[[bench]]
name = "kyber_bench"
harness = false
path = "benches/kyber_bench.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = false
debug = false

[profile.bench]
inherits = "release"
